Modified the css to prevent the merge tag box from breaking when a field key is too long.

--- a/assets/scss/admin/merge-tags-tooltip.scss
+++ b/assets/scss/admin/merge-tags-tooltip.scss
@@ -135,6 +135,7 @@ label.has-merge-tags {
 
     .merge-tag-sections {
         background-color: #DBDDDD;
+        min-width: 15%;
         ul {
             margin: 0;
             li {
